fix horizontal scroll bar

--- a/css/index.css
+++ b/css/index.css
@@ -42,6 +42,7 @@ flex-basis */
 
 
 body {
+    overflow-x: hidden;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
